# fine_tune_whisper

./: README.md  fine_tune.py  main.py  pyproject.toml  requirements.txt
