[project]
name = "fine-tune-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.32.3",
    "jiwer>=3.1.0",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "tensorboardx>=2.6.2.2",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
